# mlibc

./: .gitignore  README.md  cross.txt  meson.build  meson_options.txt
.github/workflows/: ci.yml
ci/: myos.cross-file  myos.headers.cross-file
options/ansi/generic/: stdlib-stubs.cpp
options/ansi/include/: limits.h
options/elf/include/: elf.h  link.h
options/internal/gcc-extra/: mlibc_crtbegin.S
options/internal/include/bits/: types.h
options/internal/include/mlibc/: internal-sysdeps.hpp
options/internal/x86/: thread.cpp
options/lsb/generic/: tls.cpp
options/posix/generic/: posix_stdlib.cpp  sys-uio.cpp  sys-utsname-stubs.cpp  unistd-stubs.cpp
options/posix/musl-generic/: glob.cpp
options/rtdl/generic/: linker.cpp  linker.hpp  main.cpp
options/rtdl/x86/: entry.S  runtime.S
sysdeps/myos/: meson.build
sysdeps/myos/crt-src/: crt0.S
sysdeps/myos/generic/: entry.cpp  syscall.hpp  sysdeps.cpp
sysdeps/myos/include/abi-bits/: abi.h  auxv.h  blkcnt_t.h  blksize_t.h  dev_t.h  errno.h  fcntl.h  gid_t.h  in.h  ino_t.h  mode_t.h  nlink_t.h  pid_t.h  resource.h  seek-whence.h  signal.h  socket.h  stat.h  termios.h  time.h  uid_t.h  vm-flags.h
sysdeps/myos/rtdl-generic/: support.cpp
